# rvcpu

./: .gitignore  .scalafmt.conf  Makefile  README.md  build.sbt
.bloop/: rvcpu-test.json  rvcpu.json
.metals/: metals.trace.db
.metals/.reports/metals-full/2025-10-20/: r_compiler-error_(default-b94f72)_14-47-33-993.md  r_compiler-error_(default-b94f72)_14-47-34-023.md  r_compiler-error_(default-b94f72)_14-47-34-112.md  r_compiler-error_(default-b94f72)_14-47-34-188.md  r_compiler-error_(rvcpu)_14-48-40-594.md  r_compiler-error_(rvcpu)_14-48-40-676.md  r_compiler-error_(rvcpu)_14-48-41-056.md  r_compiler-error_(rvcpu)_14-48-41-189.md  r_compiler-error_(rvcpu)_14-48-41-325.md  r_compiler-error_(rvcpu)_14-48-41-496.md  r_compiler-error_(rvcpu)_14-48-41-722.md  r_compiler-error_(rvcpu)_14-48-41-981.md  r_compiler-error_(rvcpu)_14-48-42-008.md  r_compiler-error_(rvcpu)_14-48-42-059.md  r_compiler-error_(rvcpu)_14-48-42-142.md  r_compiler-error_(rvcpu)_14-54-15-360.md  r_compiler-error_(rvcpu)_14-54-22-824.md  r_compiler-error_(rvcpu)_14-54-23-096.md  r_compiler-error_(rvcpu)_14-54-23-684.md  r_compiler-error_(rvcpu)_14-54-23-767.md  r_compiler-error_(rvcpu)_14-54-23-846.md  r_compiler-error_(rvcpu)_14-54-23-872.md  r_compiler-error_(rvcpu)_14-54-23-939.md  r_compiler-error_(rvcpu)_14-54-24-004.md  r_compiler-error_14-42-52-131.md  r_compiler-error_14-42-52-178.md  r_compiler-error_14-42-52-324.md  r_compiler-error_14-42-52-804.md  r_compiler-error_14-42-53-725.md  r_compiler-error_14-43-06-262.md  r_compiler-error_14-43-06-397.md  r_compiler-error_14-43-06-456.md
arch/: main.scala  package.scala
arch/core/: core.scala  package.scala  pipeline.scala
arch/core/alu/: alu.scala
arch/core/alu/variants/: rv32i.scala  rv32i_consts.scala  rv32i_utils.scala
arch/core/common/: consts.scala  data_forwarding.scala  pipeline.scala
arch/core/decoder/: abstract.scala  constant.scala  decoder.scala  factory.scala  logic.scala
arch/core/decoder/variants/: rv32i.scala  rv32i_consts.scala  rv32i_ctrl.scala  rv32i_utils.scala
arch/core/imm/: abstract.scala  factory.scala  immgen.scala
arch/core/imm/variants/: rv32_consts.scala  rv32_utils.scala
arch/core/lsu/: abstract.scala  factory.scala  lsu.scala
arch/core/lsu/variants/: rv32i.scala  rv32i_consts.scala  rv32i_utils.scala
arch/core/regfile/: abstract.scala  factory.scala  regfile.scala
arch/core/regfile/varians/: rv32i.scala
core/: Cpu.scala  Ctrl.scala  EX-MEM.scala  ID-EX.scala  cpu.scala  ctrl.scala
core/Common/: ForwardingUtils.scala  Op.scala
core/EX/: Alu.scala  ForwardingUnit.scala  alu.scala  op.scala  regfile.scala
core/EX/ALU/: Alu.scala  IO.scala
core/ID/: Decoder.scala  ForwardingUnit.scala  Funct3Decoder.scala  Funct7Decoder.scala  Immgen.scala  OpCodeDecoder.scala
core/MEM/: LSU.scala  LSUIO.scala  op.scala
project/.bloop/: rvcpu-build.json
project/project/.bloop/: rvcpu-build-build.json
scripts/: cocotb.sh  cocotb_fzf.sh  stat_yosys_xc7.sh  stat_yosys_xc7_fzf.sh  tb.sh  tb_fzf.sh
sims/: CMakeLists.txt  Makefile  README.md
sims/include/: cpu_sim.hh  elf_loader.hh  instruction.hh  memory.hh  trace.hh
sims/src/: CMakeLists.txt  cpu_sim.cc  elf_loader.cc  instruction.cc  main.cc  memory.cc  trace.cc
sims/tests/: Makefile  linker.ld
src/core/: cpu.scala
src/top/: a.scala
